<resources>
    <string name="app_name">Healthy Heart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_emergency">Emergency</string>
    <string name="menu_hospital">Hospital</string>
    <string name="menu_prediction">Prediction</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_about">About Us</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="add_record">add_record</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">List is Empty</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="cp">Cp</string>
    <string name="recg">Recg</string>
    <string name="emergency">Emergency</string>
    <string name="positive_affirmations">Positive Affirmations</string>
    <string name="sos">SOS</string>
    <string name="default_text">--</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>