<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_emergency" />
        <item
            android:id="@+id/nav_hospital"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_hospital" />
        <item
            android:id="@+id/nav_prediction"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_prediction" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about" />
    </group>
</menu>