<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healthyheart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.example.healthyheart.ui.emergency.EmergencyFragment"
        android:label="@string/menu_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.example.healthyheart.ui.hospital.HospitalFragment"
        android:label="@string/menu_hospital"
        tools:layout="@layout/fragment_hospital" />

    <fragment
        android:id="@+id/nav_prediction"
        android:name="com.example.healthyheart.ui.prediction.PredictionFragment"
        android:label="@string/menu_prediction"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/nav_rewards"
        android:name="com.example.healthyheart.ui.rewards.RewardsFragment"
        android:label="@string/menu_rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.healthyheart.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>