<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prediction.PredictionFragment">

    <Button
        android:id="@+id/predict_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Predict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recg_inp" />

    <EditText
        android:id="@+id/rbp_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Rbp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="@+id/gender_inp"
        app:layout_constraintTop_toBottomOf="@+id/age_inp" />

    <EditText
        android:id="@+id/recg_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/recg"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="@+id/cp_inp"
        app:layout_constraintTop_toBottomOf="@+id/rbp_inp" />

    <EditText
        android:id="@+id/cp_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/cp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_inp" />

    <EditText
        android:id="@+id/age_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="@+id/name_inp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/gender_inp"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:hint="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_inp" />

</androidx.constraintlayout.widget.ConstraintLayout>